--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Setembro Amarelo — Prevenção ao Suicídio e Valorização da Vida</title>
   <meta name="description" content="Site informativo sobre Setembro Amarelo: sinais de alerta, prevenção ao suicídio, recursos de apoio e como ajudar.">
   <meta name="keywords" content="setembro amarelo, prevenção suicídio, saúde mental, CVV, valorização da vida">
-  <meta name="author" content="Seu Nome ou Organização">
+  <meta name="author" content="Turma 231, Lucas Mazetto, Anderson">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
