--- a/index.html
+++ b/index.html
@@ -1166,14 +1166,13 @@
             </div>
             
             <div class="footer-bottom">
-                <p>© 2023 Campanhas de Saúde. Todos os direitos reservados. | Desenvolvido com ❤️ para conscientização sobre saúde e prevenção</p>
+                <p>© 2025 Campanhas de Saúde. Todos os direitos reservados. | Desenvolvido com ❤️ pelos alunos da turma 231: Lucas, Ray, Kamilly, Nathi, Anderson, José, afim de conscientizar a todos sobre saúde e prevenção</p>
                 <p>As informações contidas neste site são para fins educativos e não substituem acompanhamento profissional.</p>
             </div>
         </div>
     </footer>
 
     <script>
-        // Função para rolar suavemente até uma seção
         function scrollToSection(sectionId) {
             const element = document.getElementById(sectionId);
             if (element) {
